deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stg-REPLACE-ME-service
spec:
  selector:
    app: stg-REPLACE-ME # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 3000
      targetPort: 3000
