deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ingress-${NAMESPACE}-green # must be <ingress-name>-<ns>-${clusterColor}
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stg-REPLACE-ME-service # this should match the metadata.name in service.yml
                port:
                  number: 3000
